Add second line of lyrics

--- a/audiosettings.json
+++ b/audiosettings.json
@@ -85,7 +85,7 @@
             "partId": "4",
             "soloMuteState": {
                 "mute": false,
-                "solo": true
+                "solo": false
             }
         },
         {
